OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Drivers_License_Base_App__c.field-meta.xml
<CustomField>
    <fullName>Drivers_License_Base_App__c</fullName>
    <label>Drivers License - Base App</label>
    <length>100</length>
    <type>Text</type>
</CustomField>