OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Drivers_License_Completed__c.field-meta.xml
<CustomField>
    <fullName>Drivers_License_Completed__c</fullName>
    <label>Drivers License Completed</label>
    <type>Date</type>
</CustomField>