OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Drivers_License_Summary__c.field-meta.xml
<CustomField>
    <fullName>Drivers_License_Summary__c</fullName>
    <label>Drivers License Summary</label>
    <type>TextArea</type>
</CustomField>