OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Due_Diligence_Summary__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Summary__c</fullName>
    <label>Due Diligence Summary</label>
    <type>TextArea</type>
</CustomField>