OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Eero_Web_Registration__c.field-meta.xml
<CustomField>
    <fullName>Eero_Web_Registration__c</fullName>
    <defaultValue>&quot;Pending&quot;</defaultValue>
    <label>Eero Web Registration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Not Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>