OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Fee_Age__c.field-meta.xml
<CustomField>
    <fullName>Fee_Age__c</fullName>
    <formula>IF(ISBLANK(Fee_Complete__c), TODAY() - Pending_Initial_Review__c, Fee_Complete__c - Pending_Initial_Review__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fee Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>