OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Fee_Base_App__c.field-meta.xml
<CustomField>
    <fullName>Fee_Base_App__c</fullName>
    <label>Fee - Base App</label>
    <length>100</length>
    <type>Text</type>
</CustomField>