OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Fee_Complete__c.field-meta.xml
<CustomField>
    <fullName>Fee_Complete__c</fullName>
    <label>Fee Completed</label>
    <type>Date</type>
</CustomField>