OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Fee_Summary__c.field-meta.xml
<CustomField>
    <fullName>Fee_Summary__c</fullName>
    <label>Fee Summary</label>
    <type>TextArea</type>
</CustomField>