OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/FFL_Code__c.field-meta.xml
<CustomField>
    <fullName>FFL_Code__c</fullName>
    <label>FFL Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>