OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/FIN_Letter_Age__c.field-meta.xml
<CustomField>
    <fullName>FIN_Letter_Age__c</fullName>
    <formula>IF(ISBLANK(FIN_Letter_Completed__c), TODAY() - Pending_Initial_Review__c, FIN_Letter_Completed__c - Pending_Initial_Review__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FIN Letter Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>