OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/FIN_Letter_Completed__c.field-meta.xml
<CustomField>
    <fullName>FIN_Letter_Completed__c</fullName>
    <label>FIN Letter Completed</label>
    <type>Date</type>
</CustomField>