OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Finance_Approval_Age__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approval_Age__c</fullName>
    <formula>IF(ISBLANK(Finance_Approval_Complete__c), TODAY() -  Pending_Finance_Approval__c , Finance_Approval_Complete__c - Pending_Finance_Approval__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finance Approval Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>