OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Finance_Approval_Complete__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approval_Complete__c</fullName>
    <label>Finance Approval Complete</label>
    <type>Date</type>
</CustomField>