OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Finance_Manager_Approval__c.field-meta.xml
<CustomField>
    <fullName>Finance_Manager_Approval__c</fullName>
    <label>Finance Manager Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>NOT REQUIRED</fullName>
                <label>Not Required</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>