OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/GL_Ins_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>GL_Ins_Exp_Date__c</fullName>
    <label>GL Ins Exp Date</label>
    <type>Date</type>
</CustomField>