OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/In_Process__c.field-meta.xml
<CustomField>
    <fullName>In_Process__c</fullName>
    <label>In Process</label>
    <type>Date</type>
</CustomField>