OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Infrastructure_Territory_Email__c.field-meta.xml
<CustomField>
    <fullName>Infrastructure_Territory_Email__c</fullName>
    <label>Infrastructure Territory Email</label>
    <type>Email</type>
</CustomField>