OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Inside_BDM__c.field-meta.xml
<CustomField>
    <fullName>Inside_BDM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inside BDM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts3</relationshipName>
    <type>Lookup</type>
</CustomField>