OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Insurance_Age__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Age__c</fullName>
    <formula>IF(ISBLANK(Insurance_Completed__c), TODAY() - Pending_Initial_Review__c, Insurance_Completed__c - Pending_Initial_Review__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>