OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Insurance_Base_App__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Base_App__c</fullName>
    <label>Insurance - Base App</label>
    <length>15</length>
    <type>Text</type>
</CustomField>