OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Insurance_Completed__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Completed__c</fullName>
    <label>Insurance Completed</label>
    <type>Date</type>
</CustomField>