OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Insurance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Notes__c</fullName>
    <label>Insurance Notes</label>
    <type>TextArea</type>
</CustomField>