OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Live_Photo_Age__c.field-meta.xml
<CustomField>
    <fullName>Live_Photo_Age__c</fullName>
    <formula>IF(ISBLANK(Live_Photo_Completed__c), TODAY() - Pending_Initial_Review__c, Live_Photo_Completed__c - Pending_Initial_Review__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Live Photo Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>