OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Live_Photo_Base_App__c.field-meta.xml
<CustomField>
    <fullName>Live_Photo_Base_App__c</fullName>
    <label>Live Photo - Base App</label>
    <length>100</length>
    <type>Text</type>
</CustomField>