OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Live_Photo_Completed__c.field-meta.xml
<CustomField>
    <fullName>Live_Photo_Completed__c</fullName>
    <label>Live Photo Completed</label>
    <type>Date</type>
</CustomField>