OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/LU_Training_Complete__c.field-meta.xml
<CustomField>
    <fullName>LU_Training_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LU Training Complete</label>
    <type>Checkbox</type>
</CustomField>