OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/MDF_Agreement__c.field-meta.xml
<CustomField>
    <fullName>MDF_Agreement__c</fullName>
    <defaultValue>&quot;Not Started&quot;</defaultValue>
    <label>MDF Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Sent to Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>