OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/MDP_Channel__c.field-meta.xml
<CustomField>
    <fullName>MDP_Channel__c</fullName>
    <label>MDP Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>D2D</fullName>
            </value>
            <value>
                <fullName>LSP</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>ISP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>