OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/MDP_T_Mobile_BDM__c.field-meta.xml
<CustomField>
    <fullName>MDP_T_Mobile_BDM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MDP/T-Mobile BDM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ContractsqBI6</relationshipName>
    <type>Lookup</type>
</CustomField>