OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Microsite_URL__c.field-meta.xml
<CustomField>
    <fullName>Microsite_URL__c</fullName>
    <label>Microsite URL</label>
    <type>Url</type>
</CustomField>