OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Migrated__c.field-meta.xml
<CustomField>
    <fullName>Migrated__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Migrated</label>
    <type>Checkbox</type>
</CustomField>