OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/National_Retail_Sara_Plus_Login__c.field-meta.xml
<CustomField>
    <fullName>National_Retail_Sara_Plus_Login__c</fullName>
    <label>National Retail Sara Plus Login</label>
    <length>50</length>
    <type>Text</type>
</CustomField>