OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/NDA_Status__c.field-meta.xml
<CustomField>
    <fullName>NDA_Status__c</fullName>
    <label>NDA Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>