OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/NFFL_Code__c.field-meta.xml
<CustomField>
    <fullName>NFFL_Code__c</fullName>
    <label>NFFL Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>