OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/NR_Amendment_Training__c.field-meta.xml
<CustomField>
    <fullName>NR_Amendment_Training__c</fullName>
    <label>NR Amendment Training</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>