OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/NR_Amendment_Training_email_sent__c.field-meta.xml
<CustomField>
    <fullName>NR_Amendment_Training_email_sent__c</fullName>
    <label>NR Amendment Training email sent</label>
    <type>Date</type>
</CustomField>