OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/NR_Amendment_Welcome_email_sent__c.field-meta.xml
<CustomField>
    <fullName>NR_Amendment_Welcome_email_sent__c</fullName>
    <label>NR Amendment Welcome email sent</label>
    <type>Date</type>
</CustomField>