OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/NTID_Number__c.field-meta.xml
<CustomField>
    <fullName>NTID_Number__c</fullName>
    <label>NTID #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>