OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/NTID_Password__c.field-meta.xml
<CustomField>
    <fullName>NTID_Password__c</fullName>
    <label>NTID Password</label>
    <length>50</length>
    <type>Text</type>
</CustomField>