OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Offshore_Age__c.field-meta.xml
<CustomField>
    <fullName>Offshore_Age__c</fullName>
    <formula>IF(ISBLANK(Offshore_Complete__c), TODAY() - Offshore_Sent_to_Partner__c, Offshore_Complete__c -  Offshore_Sent_to_Partner__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offshore Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>