OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Offshore_Approved_Location_s__c.field-meta.xml
<CustomField>
    <fullName>Offshore_Approved_Location_s__c</fullName>
    <label>Offshore Approved Location(s)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>