OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Offshore_Complete__c.field-meta.xml
<CustomField>
    <fullName>Offshore_Complete__c</fullName>
    <label>Offshore Complete</label>
    <type>Date</type>
</CustomField>