OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Offshore_Sent_to_Partner__c.field-meta.xml
<CustomField>
    <fullName>Offshore_Sent_to_Partner__c</fullName>
    <label>Offshore Sent to Partner</label>
    <type>Date</type>
</CustomField>