OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Offshore_Status__c.field-meta.xml
<CustomField>
    <fullName>Offshore_Status__c</fullName>
    <label>Offshore Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Paperwork Sent</fullName>
            </value>
            <value>
                <fullName>Pending Initial Review</fullName>
            </value>
            <value>
                <fullName>Sent to Partner</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>