OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/On_Hold_Age__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Age__c</fullName>
    <formula>IF(ISBLANK(On_Hold_End_Date__c), TODAY() - On_Hold_Date__c, On_Hold_End_Date__c - On_Hold_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On Hold Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>