OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Onboarding_Age__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Age__c</fullName>
    <formula>IF(ISBLANK(Application_Completed__c), TODAY() - In_Process__c, Application_Completed__c - In_Process__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onboarding Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>