OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Onboarding_Complete__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Onboarding Complete</label>
    <type>Checkbox</type>
</CustomField>