OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Onboarding_Rep__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onboarding Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ContractsnhCl</relationshipName>
    <type>Lookup</type>
</CustomField>