OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Opportunity_Source__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Source__c</fullName>
    <formula>Text( Opportunity_to_Contract__r.Opportunity__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>* Opportunity Source</label>
    <type>Text</type>
</CustomField>