OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Opportunity_to_Contract__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_to_Contract__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>