OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Order_Entry_Passcode__c.field-meta.xml
<CustomField>
    <fullName>Order_Entry_Passcode__c</fullName>
    <label>Order Entry Passcode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>