OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Order_Entry_Platform_Notes__c.field-meta.xml
<CustomField>
    <fullName>Order_Entry_Platform_Notes__c</fullName>
    <label>Order Entry Platform Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>