OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Order_Entry_Platform_Setup_Age__c.field-meta.xml
<CustomField>
    <fullName>Order_Entry_Platform_Setup_Age__c</fullName>
    <formula>IF(ISBLANK(Order_Entry_Platform_Setup_Completed__c), TODAY() - Order_Entry_Platform_Setup_In_Progress__c, Order_Entry_Platform_Setup_Completed__c - Order_Entry_Platform_Setup_In_Progress__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Entry Platform Setup Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>