OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Order_Entry_Platform_Setup_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Order_Entry_Platform_Setup_In_Progress__c</fullName>
    <label>Order Entry Platform Setup Requested</label>
    <type>Date</type>
</CustomField>