OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Order_Entry_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_Entry_User_ID__c</fullName>
    <label>Order Entry User ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>