OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Outside_Territory_Manager__c.field-meta.xml
<CustomField>
    <fullName>Outside_Territory_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outside Territory Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ContractsqBEx</relationshipName>
    <type>Lookup</type>
</CustomField>