OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Packet_Sent_to_Partner_Age__c.field-meta.xml
<CustomField>
    <fullName>Packet_Sent_to_Partner_Age__c</fullName>
    <formula>IF(ISBLANK(Packet_Sent_to_Partner_Completed__c), TODAY() - Pending_Initial_Review__c, Packet_Sent_to_Partner_Completed__c - Pending_Initial_Review__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Packet Sent to Partner Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>