OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Packet_Sent_to_Partner_Completed__c.field-meta.xml
<CustomField>
    <fullName>Packet_Sent_to_Partner_Completed__c</fullName>
    <label>Packet Sent to Partner Completed</label>
    <type>Date</type>
</CustomField>