OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Partner_Portal_Temporary_Password__c.field-meta.xml
<CustomField>
    <fullName>Partner_Portal_Temporary_Password__c</fullName>
    <label>Partner Portal Temporary Password</label>
    <length>50</length>
    <type>Text</type>
</CustomField>