OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Partner_Portal_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Portal_User_Name__c</fullName>
    <label>Partner Portal User Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>