OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Partner_Status__c.field-meta.xml
<CustomField>
    <fullName>Partner_Status__c</fullName>
    <defaultValue>&quot;No Action Required&quot;</defaultValue>
    <label>Partner Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ATT - Pending Dealer Code</fullName>
            </value>
            <value>
                <fullName>ATT - Pending UID</fullName>
            </value>
            <value>
                <fullName>ATT - Pending Eligibility</fullName>
            </value>
            <value>
                <fullName>Sara- Pending Setup</fullName>
            </value>
            <value>
                <fullName>CLINK - Pending Field Approval</fullName>
            </value>
            <value>
                <fullName>CLINK - Pending Compliance</fullName>
            </value>
            <value>
                <fullName>CLINK - Pending Setup</fullName>
            </value>
            <value>
                <fullName>VS - Pending Initial Review</fullName>
            </value>
            <value>
                <fullName>VS - Pending Training</fullName>
            </value>
            <value>
                <fullName>VS - Pending Setup</fullName>
            </value>
            <value>
                <fullName>No Action Required</fullName>
            </value>
            <value>
                <fullName>SS – Pending Review</fullName>
            </value>
            <value>
                <fullName>SS – Pending Training</fullName>
            </value>
            <value>
                <fullName>SS – Pending Setup</fullName>
            </value>
            <value>
                <fullName>SafeStreets Approved</fullName>
            </value>
            <value>
                <fullName>ATT - Legal Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>