OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Partner_Status_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Partner_Status_Change_Date__c</fullName>
    <label>Partner Status Change Date</label>
    <type>DateTime</type>
</CustomField>