OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/PCI_Cert__c.field-meta.xml
<CustomField>
    <fullName>PCI_Cert__c</fullName>
    <label>PCI Cert</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>