OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/PCI_Cert_Age__c.field-meta.xml
<CustomField>
    <fullName>PCI_Cert_Age__c</fullName>
    <formula>IF(ISBLANK( PCI_Cert_Completed__c ), TODAY() - Pending_Initial_Review__c, PCI_Cert_Completed__c - Pending_Initial_Review__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PCI Cert Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>