OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/PCI_Cert_Completed__c.field-meta.xml
<CustomField>
    <fullName>PCI_Cert_Completed__c</fullName>
    <label>PCI Cert Completed</label>
    <type>Date</type>
</CustomField>